--- a/spud/templates/spud/static.html
+++ b/spud/templates/spud/static.html
@@ -20,6 +20,8 @@
 <script type="text/javascript" src="{% static 'js/showdown.js' %}" />
 
 <script type="text/javascript" src="{% static 'js/base.js' %}" />
+<script type="text/javascript" src="{% static 'js/dialog.js' %}" />
+<script type="text/javascript" src="{% static 'js/infobox.js' %}" />
 <script type="text/javascript" src="{% static 'js/urls.js' %}" />
 <script type="text/javascript" src="{% static 'js/generic.js' %}" />
 <script type="text/javascript" src="{% static 'js/album.js' %}" />
@@ -36,7 +38,5 @@
 
 
 {% block content %}
-<div id="content-main">
-    <noscript>This website requires JavaScript. Every time you view this page without JavaScript a small cute kitten dies.</noscript>
-</div>
+<noscript>This website requires JavaScript. Every time you view this page without JavaScript a small cute kitten dies.</noscript>
 {% endblock %}
