--- a/spud/templates/base.html
+++ b/spud/templates/base.html
@@ -7,7 +7,7 @@
 <!--[if lte IE 7]><link rel="stylesheet" type="text/css" href="{% block stylesheet_ie %}{% static "css/ie.css" %}{% endblock %}" /><![endif]-->
 {% if LANGUAGE_BIDI %}<link rel="stylesheet" type="text/css" href="{% block stylesheet_rtl %}{% static "css/rtl.css" %}{% endblock %}" />{% endif %}
 <script type="text/javascript">window.__admin_media_prefix__ = "{% filter escapejs %}{% static "admin/" %}{% endfilter %}";</script>
-<script type="text/javascript">window.__media_prefix = "{% filter escapejs %}{% static "" %}{% endfilter %}";</script>
+<script type="text/javascript">window.__static_prefix = "{% filter escapejs %}{% static "" %}{% endfilter %}";</script>
 <script type="text/javascript">window.__root_prefix = "{% filter escapejs %}{% url "root" %}{% endfilter %}";</script>
 {% block extrahead %}{% endblock %}
 {% block blockbots %}<meta name="robots" content="NONE,NOARCHIVE" />{% endblock %}
@@ -53,7 +53,7 @@
     {% endblock messages %}
 
     <!-- Content -->
-    <div id="content" class="{% block coltype %}colM{% endblock %}">
+    <div id="content">
         {% block pretitle %}{% endblock %}
         {% block content %}
         {{ content }}
