--- a/spud/templates/spud/static.html
+++ b/spud/templates/spud/static.html
@@ -24,6 +24,7 @@
 <script type="text/javascript" src="{% static 'js/urls.js' %}" />
 <script type="text/javascript" src="{% static 'js/generic.js' %}" />
 <script type="text/javascript" src="{% static 'js/album.js' %}" />
+<script type="text/javascript" src="{% static 'js/category.js' %}" />
 <script type="text/javascript" src="{% static 'js/spud.js' %}" />
 
 {% endblock %}
