--- a/spud/templates/spud/static.html
+++ b/spud/templates/spud/static.html
@@ -27,6 +27,7 @@
 <script type="text/javascript" src="{% static 'js/category.js' %}" />
 <script type="text/javascript" src="{% static 'js/place.js' %}" />
 <script type="text/javascript" src="{% static 'js/person.js' %}" />
+<script type="text/javascript" src="{% static 'js/photo.js' %}" />
 <script type="text/javascript" src="{% static 'js/spud.js' %}" />
 
 {% endblock %}
