--- a/spud/templates/spud/static.html
+++ b/spud/templates/spud/static.html
@@ -17,6 +17,8 @@
 <script type="text/javascript" src="{% static 'js/jquery.blockUI.js' %}" />
 <script type="text/javascript" src="{% static 'js/jcookie.js' %}" />
 <script type="text/javascript" src="{% static 'js/showdown.js' %}" />
+<script type="text/javascript" src="{% static 'js/moment-with-locales.js' %}" />
+<script type="text/javascript" src="{% static 'js/moment-timezone-with-data.js' %}" />
 
 <script type="text/javascript" src="{% static 'js/base.js' %}" />
 <script type="text/javascript" src="{% static 'js/dialog.js' %}" />
