--- a/spud/static/css/base.css
+++ b/spud/static/css/base.css
@@ -83,6 +83,20 @@ body { margin:0; padding:0; font-size:11px; font-family:"Lucida Grande","DejaVu 
 .infobox .def_list .term { margin:0; padding:5px; background:#ddd; color:#333; text-align:right; font-weight:bold; position:absolute; width:100px; vertical-align: top; }
 .infobox .def_list .definition { margin-left:110px; padding:5px; display:inline-block; vertical-align:top;}
 
+/* FEEDBACK LIST */
+.feedback_item { border:1px solid #dddddd; background: #ddd; margin: 5px; }
+.feedback_item > div { text-decoration: none; opacity:1.0; }
+.feedback_item .title { font-weight:bold; }
+.feedback_item img { float: right; }
+.feedback_item.public > div { background:#fff; }
+.feedback_item.public { background:#fff; }
+.feedback_item.removed > div { text-decoration: line-through; opacity:0.5; }
+
+.feedback_list { border:1px solid #333; margin-bottom: 10px; }
+.feedback_list .feedback_ul { padding: 0; }
+.feedback_list .feedback_ul > li { list-style-type: none; }
+.feedback_list .feedback_item { vertical-align:top; margin:10px; padding:10px; }
+
 /* LINKS */
 a:link, a:visited { color: #5b80b2; text-decoration:none; }
 a:hover { color: #036; }
