--- a/spud/static/css/base.css
+++ b/spud/static/css/base.css
@@ -99,6 +99,7 @@ ul.menubar .ui-menu-item {
 
 .photo_list { border:1px solid #666; margin-bottom: 10px; height: 400px; overflow-y: scroll; background: #fff; }
 .photo_list > ul { padding:0; }
+.photo_list .ui-selected { background: #F39814; }
 .photo_list .photo_item { display:inline-block; vertical-align:top; height:170px; margin:10px; padding-top:10px; text-align: center; width:140px; }
 .photo_list .photo_item .desc { float:left; display:none; }
 .photo_list .photo_item:HOVER .desc { display:inline; background:#ddd; color:#000; border:1px solid #000; position:relative; left:-25px; top:0px; z-index:100; width:200px; padding:10px; }
