--- a/spud/static/css/base.css
+++ b/spud/static/css/base.css
@@ -66,7 +66,14 @@ ul.menubar .ui-menu-item {
     border: 1px solid #ccc;
     background: #fff;
     border-radius: 4px;
+}
+
+.infobox .fields {
     margin: 5px;
+}
+
+.ui-dialog .fields {
+    width: 100%;
 }
 
 .ui-dialog .ui-tabs {
@@ -103,6 +110,10 @@ ul.menubar .ui-menu-item {
 .photo_list .photo_item { display:inline-block; vertical-align:top; height:170px; margin:10px; padding-top:10px; text-align: center; width:140px; }
 .photo_list .photo_item .desc { float:left; display:none; }
 .photo_list .photo_item:HOVER .desc { display:inline; background:#ddd; color:#000; border:1px solid #000; position:relative; left:-25px; top:0px; z-index:100; width:200px; padding:10px; }
+
+.photo_list.disabled {
+    background: #ddd;
+}
 
 /* AUTO COMPLETE */
 .ui-autocomplete-input { width:99%; }
