--- a/spud/static/css/base.css
+++ b/spud/static/css/base.css
@@ -22,6 +22,7 @@ ul.menubar {
 
 ul.menubar .ui-menu-item {
     display: inline-block;
+    font-weight: normal;
 }
 
 /* SCREEN */
@@ -33,7 +34,8 @@ ul.menubar .ui-menu-item {
     margin: 5px;
     padding: 0px;
     border-radius: 10px;
-    background: #eee;
+    background: #ddd;
+    border: 1px solid #ccc;
 }
 
 .screen .removed {
@@ -62,7 +64,7 @@ ul.menubar .ui-menu-item {
     background: #eee;
 }
 .screen.disabled .screen_header {
-    border: 1px solid #ccc;
+    border: none;
     color: #ccc;
     background: none;
 }
@@ -157,12 +159,6 @@ ul.menubar .ui-menu-item {
 .feedback_list .feedback_ul { padding: 0; }
 .feedback_list .feedback_ul > li { list-style-type: none; }
 .feedback_list .feedback_item { vertical-align:top; margin:10px; padding:10px; }
-
-/* LINKS */
-a:link, a:visited { color: #5b80b2; text-decoration:none; }
-a:hover { color: #036; }
-a img { border:none; }
-a.section:link, a.section:visited { color: white; text-decoration:none; }
 
 /* GLOBAL DEFAULTS */
 p, ol, ul, dl { margin:.2em 0 .8em 0; }
