--- a/spud/static/css/base.css
+++ b/spud/static/css/base.css
@@ -165,6 +165,17 @@ ul.menubar .ui-menu-item {
 .maximize {
 }
 
+.maximize .screen  {
+    margin: 0px;
+    border: none;
+    border-radius: 0;
+}
+
+.maximize .screen .screen_header {
+    border: none;
+    border-radius: 0;
+}
+
 .maximize .screen.disabled {
     display: none;
 }
