--- a/spud/static/css/ajax_select.css
+++ b/spud/static/css/ajax_select.css
@@ -13,9 +13,8 @@ form .aligned .results_on_deck {
 	margin-bottom: 0.5em;
 }
 .ui-autocomplete-loading {
-	background:  url('../img/loading.gif') no-repeat;
     background-origin: content-box;
-	background-position: right;
+    background: url('../img/loading.gif') no-repeat right;
 }
 ul.ui-autocomplete {
 /*
