--- a/spud/templates/base.html
+++ b/spud/templates/base.html
@@ -1,12 +1,14 @@
 {% load admin_static %}{% load url from future %}{% load firstof from future %}<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" lang="{{ LANGUAGE_CODE|default:"en-us" }}" {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}>
+<html xmlns="http://www.w3.org/1999/xhtml" lang="{% if LANGUAGE_CODE %}{{ LANGUAGE_CODE }}{% else %}en-au{% endif %}" {% if LANGUAGE_BIDI %}dir="rtl"{% endif %}>
 <head>
 <title>{% block title %}{% endblock %}</title>
 {% block extrastyle %}{% endblock %}
 <script type="text/javascript">window.__admin_media_prefix__ = "{% filter escapejs %}{% static "admin/" %}{% endfilter %}";</script>
 <script type="text/javascript">window.__static_prefix = "{% filter escapejs %}{% static "" %}{% endfilter %}";</script>
 <script type="text/javascript">window.__root_prefix = "{% filter escapejs %}{% url "root" %}{% endfilter %}";</script>
+{% if API_ROOT_URL %}
 <script type="text/javascript">window.__api_prefix = "{% filter escapejs %}{{ API_ROOT_URL }}{% endfilter %}";</script>
+{% endif %}
 {% load pipeline %}
 {% stylesheet 'spud' %}
 {% javascript 'spud' %}
