--- a/spud/templates/base.html
+++ b/spud/templates/base.html
@@ -64,7 +64,13 @@
     </div>
     <!-- END Content -->
 
-    {% block footer %}<div id="footer"></div>{% endblock %}
+    {% block footer %}
+        <div id="footer">
+            Spud {{ version }}
+            {% if VCS_REF %}{{ VCS_REF }}{% endif %}
+            {% if BUILD_DATE %}{{ BUILD_DATE }}{% endif %}
+        </div>
+    {% endblock %}
 </div>
 <!-- END Container -->
 
